# rwkv-cpp

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  build.sh  convert.py  createTokenizer.py  setup.sh  tokenizer.h
cudaops/: operators.cu  wrapper.cpp
release/: convert.py  installdeps.sh  run.sh
src/: block.h  model.h
